src/objects/Custom_Data_Sync_Batch_Execution__c.object
<CustomObject>
    <fields>
        <fullName>Apex_Job_Id__c</fullName>
        <label>Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finish_Time__c</fullName>
        <label>Finish Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Batch Complete</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Results Generated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Custom Data Sync Batch Execution</label>
    <nameField>
        <displayFormat>CDSBE-{0000000000}</displayFormat>
        <label>Custom Data Sync Batch Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Data Sync Batch Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>